--- a/catkin_ws/src/robot_python/ui/armct_form1.ui
+++ b/catkin_ws/src/robot_python/ui/armct_form1.ui
@@ -358,7 +358,7 @@
            <widget class="QRadioButton" name="radioButton_robot1">
             <property name="geometry">
              <rect>
-              <x>90</x>
+              <x>40</x>
               <y>40</y>
               <width>91</width>
               <height>25</height>
@@ -371,7 +371,7 @@
            <widget class="QRadioButton" name="radioButton_robot2">
             <property name="geometry">
              <rect>
-              <x>300</x>
+              <x>190</x>
               <y>40</y>
               <width>91</width>
               <height>25</height>
@@ -379,6 +379,19 @@
             </property>
             <property name="text">
              <string>armc</string>
+            </property>
+           </widget>
+           <widget class="QRadioButton" name="radioButton_all">
+            <property name="geometry">
+             <rect>
+              <x>320</x>
+              <y>40</y>
+              <width>91</width>
+              <height>25</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>all</string>
             </property>
            </widget>
           </widget>
