--- a/catkin_ws/src/robot_python/ui/armct_form1.ui
+++ b/catkin_ws/src/robot_python/ui/armct_form1.ui
@@ -130,17 +130,17 @@
         <widget class="QLabel" name="label_19">
          <property name="geometry">
           <rect>
-           <x>120</x>
+           <x>190</x>
            <y>0</y>
-           <width>231</width>
+           <width>141</width>
            <height>31</height>
           </rect>
          </property>
          <property name="text">
-          <string>选择需要绘制状态图机械臂</string>
+          <string>选择需要绘制目标图</string>
          </property>
         </widget>
-        <widget class="QRadioButton" name="radioButton_robot1_2">
+        <widget class="QRadioButton" name="radioButton_force">
          <property name="geometry">
           <rect>
            <x>70</x>
@@ -150,10 +150,10 @@
           </rect>
          </property>
          <property name="text">
-          <string>armt</string>
+          <string>六维力</string>
          </property>
         </widget>
-        <widget class="QRadioButton" name="radioButton_robot2_2">
+        <widget class="QRadioButton" name="radioButton_pos">
          <property name="geometry">
           <rect>
            <x>310</x>
@@ -163,7 +163,7 @@
           </rect>
          </property>
          <property name="text">
-          <string>armc</string>
+          <string>位置</string>
          </property>
         </widget>
        </widget>
@@ -446,15 +446,15 @@
          </rect>
         </property>
         <property name="text">
-         <string>q4:</string>
+         <string>qt4:</string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_q5">
+       <widget class="QLineEdit" name="lineEdit_q5_1">
         <property name="geometry">
          <rect>
           <x>50</x>
           <y>200</y>
-          <width>181</width>
+          <width>61</width>
           <height>33</height>
          </rect>
         </property>
@@ -472,15 +472,15 @@
          </rect>
         </property>
         <property name="text">
-         <string>q6:</string>
+         <string>qt6:</string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_q6">
+       <widget class="QLineEdit" name="lineEdit_q6_1">
         <property name="geometry">
          <rect>
           <x>50</x>
           <y>240</y>
-          <width>181</width>
+          <width>61</width>
           <height>33</height>
          </rect>
         </property>
@@ -488,12 +488,12 @@
          <string>0</string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_q4">
+       <widget class="QLineEdit" name="lineEdit_q4_1">
         <property name="geometry">
          <rect>
           <x>50</x>
           <y>160</y>
-          <width>180</width>
+          <width>61</width>
           <height>33</height>
          </rect>
         </property>
@@ -511,20 +511,20 @@
          </rect>
         </property>
         <property name="text">
-         <string>q5:</string>
+         <string>qt5:</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_3">
         <property name="geometry">
          <rect>
-          <x>70</x>
+          <x>40</x>
           <y>0</y>
-          <width>121</width>
+          <width>171</width>
           <height>31</height>
          </rect>
         </property>
         <property name="text">
-         <string>规划关节角q/°</string>
+         <string>armc/armt规划关节角q/°</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_8">
@@ -537,15 +537,15 @@
          </rect>
         </property>
         <property name="text">
-         <string>q3:</string>
+         <string>qt3:</string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_q3">
+       <widget class="QLineEdit" name="lineEdit_q3_1">
         <property name="geometry">
          <rect>
           <x>50</x>
           <y>120</y>
-          <width>180</width>
+          <width>61</width>
           <height>33</height>
          </rect>
         </property>
@@ -563,15 +563,15 @@
          </rect>
         </property>
         <property name="text">
-         <string>q2:</string>
+         <string>qt2:</string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_q2">
+       <widget class="QLineEdit" name="lineEdit_q2_1">
         <property name="geometry">
          <rect>
           <x>50</x>
           <y>80</y>
-          <width>180</width>
+          <width>61</width>
           <height>33</height>
          </rect>
         </property>
@@ -589,15 +589,15 @@
          </rect>
         </property>
         <property name="text">
-         <string>q1:</string>
+         <string>qt1:</string>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_q1">
+       <widget class="QLineEdit" name="lineEdit_q1_1">
         <property name="geometry">
          <rect>
           <x>50</x>
           <y>40</y>
-          <width>180</width>
+          <width>61</width>
           <height>33</height>
          </rect>
         </property>
@@ -621,12 +621,12 @@
          <bool>true</bool>
         </property>
        </widget>
-       <widget class="QLineEdit" name="lineEdit_q7">
+       <widget class="QLineEdit" name="lineEdit_q7_1">
         <property name="geometry">
          <rect>
           <x>50</x>
           <y>280</y>
-          <width>181</width>
+          <width>61</width>
           <height>33</height>
          </rect>
         </property>
@@ -644,25 +644,221 @@
          </rect>
         </property>
         <property name="text">
-         <string>q7:</string>
+         <string>qt7:</string>
         </property>
        </widget>
-       <zorder>lineEdit_q4</zorder>
+       <widget class="QLineEdit" name="lineEdit_q3_2">
+        <property name="geometry">
+         <rect>
+          <x>170</x>
+          <y>120</y>
+          <width>61</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_q2_2">
+        <property name="geometry">
+         <rect>
+          <x>170</x>
+          <y>80</y>
+          <width>61</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_q6_2">
+        <property name="geometry">
+         <rect>
+          <x>170</x>
+          <y>240</y>
+          <width>61</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_11">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>200</y>
+          <width>31</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>qc5:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_16">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>40</y>
+          <width>31</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>qc1:</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_q7_2">
+        <property name="geometry">
+         <rect>
+          <x>170</x>
+          <y>280</y>
+          <width>61</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_17">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>80</y>
+          <width>31</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>qc2:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_20">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>120</y>
+          <width>31</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>qc3:</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_q4_2">
+        <property name="geometry">
+         <rect>
+          <x>170</x>
+          <y>160</y>
+          <width>61</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_q5_2">
+        <property name="geometry">
+         <rect>
+          <x>170</x>
+          <y>200</y>
+          <width>61</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_21">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>240</y>
+          <width>31</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>qc6:</string>
+        </property>
+       </widget>
+       <widget class="QLineEdit" name="lineEdit_q1_2">
+        <property name="geometry">
+         <rect>
+          <x>170</x>
+          <y>40</y>
+          <width>61</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>0</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_22">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>160</y>
+          <width>31</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>qc4:</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_23">
+        <property name="geometry">
+         <rect>
+          <x>130</x>
+          <y>280</y>
+          <width>31</width>
+          <height>33</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>qc7:</string>
+        </property>
+       </widget>
+       <zorder>lineEdit_q4_1</zorder>
        <zorder>label_4</zorder>
-       <zorder>lineEdit_q5</zorder>
+       <zorder>lineEdit_q5_1</zorder>
        <zorder>label_7</zorder>
        <zorder>label_5</zorder>
-       <zorder>lineEdit_q6</zorder>
+       <zorder>lineEdit_q6_1</zorder>
        <zorder>label_3</zorder>
        <zorder>label_8</zorder>
-       <zorder>lineEdit_q3</zorder>
+       <zorder>lineEdit_q3_1</zorder>
        <zorder>label_9</zorder>
-       <zorder>lineEdit_q2</zorder>
+       <zorder>lineEdit_q2_1</zorder>
        <zorder>label_10</zorder>
-       <zorder>lineEdit_q1</zorder>
+       <zorder>lineEdit_q1_1</zorder>
        <zorder>button_read</zorder>
-       <zorder>lineEdit_q7</zorder>
+       <zorder>lineEdit_q7_1</zorder>
        <zorder>label_6</zorder>
+       <zorder>lineEdit_q3_2</zorder>
+       <zorder>lineEdit_q2_2</zorder>
+       <zorder>lineEdit_q6_2</zorder>
+       <zorder>label_11</zorder>
+       <zorder>label_16</zorder>
+       <zorder>lineEdit_q7_2</zorder>
+       <zorder>label_17</zorder>
+       <zorder>label_20</zorder>
+       <zorder>lineEdit_q4_2</zorder>
+       <zorder>lineEdit_q5_2</zorder>
+       <zorder>label_21</zorder>
+       <zorder>lineEdit_q1_2</zorder>
+       <zorder>label_22</zorder>
+       <zorder>label_23</zorder>
       </widget>
      </item>
     </layout>
