--- a/catkin_ws/src/robot_python/ui/armc_form4.ui
+++ b/catkin_ws/src/robot_python/ui/armc_form4.ui
@@ -905,9 +905,9 @@
         <widget class="QRadioButton" name="radioButton_handle">
          <property name="geometry">
           <rect>
-           <x>20</x>
+           <x>10</x>
            <y>20</y>
-           <width>91</width>
+           <width>81</width>
            <height>22</height>
           </rect>
          </property>
@@ -921,7 +921,7 @@
         <widget class="QRadioButton" name="radioButton_lock">
          <property name="geometry">
           <rect>
-           <x>200</x>
+           <x>110</x>
            <y>20</y>
            <width>91</width>
            <height>22</height>
@@ -931,14 +931,27 @@
           <string>密码锁</string>
          </property>
         </widget>
+        <widget class="QRadioButton" name="radioButton_grab">
+         <property name="geometry">
+          <rect>
+           <x>210</x>
+           <y>20</y>
+           <width>91</width>
+           <height>22</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>抓取物体</string>
+         </property>
+        </widget>
        </widget>
        <widget class="QPushButton" name="button_check">
         <property name="geometry">
          <rect>
-          <x>110</x>
-          <y>120</y>
-          <width>171</width>
-          <height>61</height>
+          <x>130</x>
+          <y>110</y>
+          <width>141</width>
+          <height>51</height>
          </rect>
         </property>
         <property name="text">
@@ -973,7 +986,7 @@
         <property name="geometry">
          <rect>
           <x>20</x>
-          <y>200</y>
+          <y>180</y>
           <width>91</width>
           <height>51</height>
          </rect>
@@ -989,7 +1002,7 @@
         <property name="geometry">
          <rect>
           <x>140</x>
-          <y>200</y>
+          <y>180</y>
           <width>91</width>
           <height>51</height>
          </rect>
@@ -1005,7 +1018,7 @@
         <property name="geometry">
          <rect>
           <x>260</x>
-          <y>200</y>
+          <y>180</y>
           <width>91</width>
           <height>51</height>
          </rect>
@@ -1021,7 +1034,7 @@
         <property name="geometry">
          <rect>
           <x>20</x>
-          <y>280</y>
+          <y>240</y>
           <width>91</width>
           <height>51</height>
          </rect>
@@ -1037,7 +1050,7 @@
         <property name="geometry">
          <rect>
           <x>140</x>
-          <y>280</y>
+          <y>240</y>
           <width>91</width>
           <height>51</height>
          </rect>
@@ -1053,13 +1066,61 @@
         <property name="geometry">
          <rect>
           <x>260</x>
-          <y>280</y>
+          <y>240</y>
           <width>91</width>
           <height>51</height>
          </rect>
         </property>
         <property name="text">
          <string>l_back</string>
+        </property>
+        <property name="autoDefault">
+         <bool>true</bool>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="button_g_back">
+        <property name="geometry">
+         <rect>
+          <x>260</x>
+          <y>300</y>
+          <width>91</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>g_back</string>
+        </property>
+        <property name="autoDefault">
+         <bool>true</bool>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="button_g_run">
+        <property name="geometry">
+         <rect>
+          <x>140</x>
+          <y>300</y>
+          <width>91</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>g_run</string>
+        </property>
+        <property name="autoDefault">
+         <bool>true</bool>
+        </property>
+       </widget>
+       <widget class="QPushButton" name="button_g_go">
+        <property name="geometry">
+         <rect>
+          <x>20</x>
+          <y>300</y>
+          <width>91</width>
+          <height>51</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>g_go</string>
         </property>
         <property name="autoDefault">
          <bool>true</bool>
@@ -1277,14 +1338,14 @@
        <widget class="QPushButton" name="button_qq_to_xx">
         <property name="geometry">
          <rect>
-          <x>40</x>
+          <x>30</x>
           <y>220</y>
-          <width>71</width>
+          <width>91</width>
           <height>41</height>
          </rect>
         </property>
         <property name="text">
-         <string>位姿</string>
+         <string>开门位姿</string>
         </property>
         <property name="autoDefault">
          <bool>true</bool>
