--- a/catkin_ws/src/robot_python/ui/test_form2.ui
+++ b/catkin_ws/src/robot_python/ui/test_form2.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>ArmcForm1</class>
+ <widget class="QMainWindow" name="ArmcForm1">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -40,7 +40,7 @@
       <x>10</x>
       <y>410</y>
       <width>451</width>
-      <height>421</height>
+      <height>431</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_2"/>
@@ -51,7 +51,7 @@
       <x>460</x>
       <y>410</y>
       <width>511</width>
-      <height>421</height>
+      <height>431</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -68,7 +68,7 @@
          <rect>
           <x>10</x>
           <y>30</y>
-          <width>471</width>
+          <width>461</width>
           <height>301</height>
          </rect>
         </property>
@@ -76,7 +76,7 @@
        <widget class="QLabel" name="label">
         <property name="geometry">
          <rect>
-          <x>100</x>
+          <x>160</x>
           <y>0</y>
           <width>131</width>
           <height>31</height>
@@ -90,8 +90,8 @@
         <property name="geometry">
          <rect>
           <x>70</x>
-          <y>350</y>
-          <width>381</width>
+          <y>360</y>
+          <width>401</width>
           <height>31</height>
          </rect>
         </property>
@@ -99,11 +99,11 @@
          <number>24</number>
         </property>
        </widget>
-       <widget class="QLabel" name="label_15">
+       <widget class="QLabel" name="label_2">
         <property name="geometry">
          <rect>
           <x>20</x>
-          <y>350</y>
+          <y>360</y>
           <width>51</width>
           <height>31</height>
          </rect>
@@ -134,210 +134,182 @@
        <property name="frameShadow">
         <enum>QFrame::Raised</enum>
        </property>
-       <widget class="QLineEdit" name="lineEdit_sub_qq">
-        <property name="geometry">
-         <rect>
-          <x>80</x>
-          <y>90</y>
-          <width>381</width>
-          <height>41</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>/robot3/joint_states</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_17">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>30</y>
-          <width>61</width>
-          <height>33</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Sub_F:</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_sub_f">
-        <property name="geometry">
-         <rect>
-          <x>80</x>
-          <y>30</y>
-          <width>381</width>
-          <height>41</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>/robot3/ft_sensor_topic</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_pub_qq">
-        <property name="geometry">
-         <rect>
-          <x>80</x>
-          <y>150</y>
-          <width>381</width>
-          <height>41</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>/robot3/armc_position_controller/command</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_18">
-        <property name="geometry">
-         <rect>
-          <x>180</x>
-          <y>0</y>
-          <width>161</width>
-          <height>31</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>读取数据和话题地址</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_30">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>150</y>
-          <width>71</width>
-          <height>33</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Pub_qq:</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_19">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>90</y>
-          <width>71</width>
-          <height>33</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Sub_qq:</string>
-        </property>
-       </widget>
        <widget class="QWidget" name="verticalLayoutWidget_3">
         <property name="geometry">
          <rect>
-          <x>10</x>
-          <y>210</y>
-          <width>241</width>
-          <height>161</height>
+          <x>0</x>
+          <y>0</y>
+          <width>491</width>
+          <height>281</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_3">
          <item>
-          <widget class="QFrame" name="frame_3">
+          <widget class="QFrame" name="frame_2">
            <property name="frameShape">
             <enum>QFrame::StyledPanel</enum>
            </property>
            <property name="frameShadow">
             <enum>QFrame::Raised</enum>
            </property>
-           <widget class="QLabel" name="label_13">
+           <widget class="QLabel" name="label_11">
             <property name="geometry">
              <rect>
-              <x>40</x>
-              <y>0</y>
-              <width>181</width>
+              <x>170</x>
+              <y>10</y>
+              <width>161</width>
               <height>31</height>
              </rect>
             </property>
             <property name="text">
-             <string>规划时间参数：单位/s</string>
+             <string>读取数据和话题地址</string>
             </property>
            </widget>
-           <widget class="QLabel" name="label_14">
+           <widget class="QLabel" name="label_30">
             <property name="geometry">
              <rect>
-              <x>20</x>
-              <y>100</y>
-              <width>91</width>
-              <height>31</height>
-             </rect>
-            </property>
-            <property name="text">
-             <string>规划时间：</string>
-            </property>
-           </widget>
-           <widget class="QLineEdit" name="lineEdit_t">
-            <property name="geometry">
-             <rect>
-              <x>110</x>
-              <y>100</y>
-              <width>101</width>
+              <x>10</x>
+              <y>160</y>
+              <width>71</width>
               <height>33</height>
              </rect>
             </property>
             <property name="text">
-             <string>30</string>
+             <string>Pub_qq:</string>
             </property>
            </widget>
-           <widget class="QLineEdit" name="lineEdit_T">
+           <widget class="QLineEdit" name="lineEdit_sub_f">
             <property name="geometry">
              <rect>
-              <x>110</x>
-              <y>50</y>
-              <width>101</width>
-              <height>33</height>
+              <x>80</x>
+              <y>40</y>
+              <width>381</width>
+              <height>41</height>
              </rect>
             </property>
             <property name="text">
-             <string>0.01</string>
+             <string>/ft_sensor_topic</string>
             </property>
            </widget>
            <widget class="QLabel" name="label_12">
             <property name="geometry">
              <rect>
-              <x>20</x>
-              <y>50</y>
-              <width>91</width>
-              <height>31</height>
+              <x>10</x>
+              <y>40</y>
+              <width>61</width>
+              <height>33</height>
              </rect>
             </property>
             <property name="text">
-             <string>规划周期：</string>
+             <string>Sub_F:</string>
+            </property>
+           </widget>
+           <widget class="QLabel" name="label_13">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>100</y>
+              <width>71</width>
+              <height>33</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>Sub_qq:</string>
+            </property>
+           </widget>
+           <widget class="QLineEdit" name="lineEdit_sub_qq">
+            <property name="geometry">
+             <rect>
+              <x>80</x>
+              <y>100</y>
+              <width>381</width>
+              <height>41</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>/armc/joint_states</string>
+            </property>
+           </widget>
+           <widget class="QLineEdit" name="lineEdit_pub_qq">
+            <property name="geometry">
+             <rect>
+              <x>80</x>
+              <y>160</y>
+              <width>381</width>
+              <height>41</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>/armc/joint_positions_controller/command</string>
+            </property>
+           </widget>
+           <widget class="QLabel" name="label_31">
+            <property name="geometry">
+             <rect>
+              <x>10</x>
+              <y>220</y>
+              <width>71</width>
+              <height>33</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>data_qq:</string>
+            </property>
+           </widget>
+           <widget class="QLineEdit" name="lineEdit_data_qq">
+            <property name="geometry">
+             <rect>
+              <x>80</x>
+              <y>220</y>
+              <width>381</width>
+              <height>41</height>
+             </rect>
+            </property>
+            <property name="text">
+             <string>/armc/joint_positions_controller/command</string>
             </property>
            </widget>
           </widget>
          </item>
         </layout>
        </widget>
-       <widget class="QPushButton" name="button_read">
+       <widget class="QPushButton" name="button_receive">
         <property name="geometry">
          <rect>
-          <x>300</x>
-          <y>260</y>
-          <width>121</width>
+          <x>130</x>
+          <y>290</y>
+          <width>221</width>
           <height>61</height>
          </rect>
         </property>
         <property name="text">
-         <string>读取参数</string>
+         <string>接收机器人状态</string>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>16</width>
+          <height>16</height>
+         </size>
+        </property>
+        <property name="autoRepeat">
+         <bool>false</bool>
+        </property>
+        <property name="autoExclusive">
+         <bool>false</bool>
+        </property>
+        <property name="autoRepeatDelay">
+         <number>400</number>
+        </property>
+        <property name="autoRepeatInterval">
+         <number>200</number>
         </property>
         <property name="autoDefault">
          <bool>true</bool>
         </property>
+        <property name="flat">
+         <bool>false</bool>
+        </property>
        </widget>
-       <zorder>lineEdit_sub_qq</zorder>
-       <zorder>label_17</zorder>
-       <zorder>lineEdit_sub_f</zorder>
-       <zorder>lineEdit_pub_qq</zorder>
-       <zorder>label_18</zorder>
-       <zorder>label_30</zorder>
-       <zorder>label_19</zorder>
-       <zorder>verticalLayoutWidget_3</zorder>
-       <zorder>button_read</zorder>
-       <zorder>frame_3</zorder>
       </widget>
      </item>
     </layout>
@@ -348,7 +320,7 @@
       <x>970</x>
       <y>410</y>
       <width>261</width>
-      <height>421</height>
+      <height>431</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -377,7 +349,7 @@
         <property name="geometry">
          <rect>
           <x>50</x>
-          <y>200</y>
+          <y>210</y>
           <width>181</width>
           <height>33</height>
          </rect>
@@ -390,7 +362,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>240</y>
+          <y>260</y>
           <width>31</width>
           <height>33</height>
          </rect>
@@ -403,7 +375,7 @@
         <property name="geometry">
          <rect>
           <x>50</x>
-          <y>240</y>
+          <y>260</y>
           <width>181</width>
           <height>33</height>
          </rect>
@@ -416,7 +388,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>280</y>
+          <y>300</y>
           <width>31</width>
           <height>33</height>
          </rect>
@@ -429,7 +401,7 @@
         <property name="geometry">
          <rect>
           <x>50</x>
-          <y>280</y>
+          <y>300</y>
           <width>181</width>
           <height>33</height>
          </rect>
@@ -455,7 +427,7 @@
         <property name="geometry">
          <rect>
           <x>10</x>
-          <y>200</y>
+          <y>210</y>
           <width>31</width>
           <height>33</height>
          </rect>
@@ -467,14 +439,14 @@
        <widget class="QLabel" name="label_3">
         <property name="geometry">
          <rect>
-          <x>70</x>
+          <x>60</x>
           <y>0</y>
-          <width>121</width>
+          <width>151</width>
           <height>31</height>
          </rect>
         </property>
         <property name="text">
-         <string>规划关节角q/°</string>
+         <string>给定关节角q/°</string>
         </property>
        </widget>
        <widget class="QLabel" name="label_8">
@@ -555,33 +527,17 @@
          <string>0</string>
         </property>
        </widget>
-       <widget class="QPushButton" name="button_plan_begin">
+       <widget class="QPushButton" name="button_wish_pos">
         <property name="geometry">
          <rect>
-          <x>30</x>
-          <y>330</y>
+          <x>90</x>
+          <y>360</y>
           <width>91</width>
-          <height>51</height>
+          <height>41</height>
          </rect>
         </property>
         <property name="text">
-         <string>起点</string>
-        </property>
-        <property name="autoDefault">
-         <bool>true</bool>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="button_plan_end">
-        <property name="geometry">
-         <rect>
-          <x>140</x>
-          <y>330</y>
-          <width>91</width>
-          <height>51</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>终点</string>
+         <string>目标点</string>
         </property>
         <property name="autoDefault">
          <bool>true</bool>
@@ -602,8 +558,7 @@
        <zorder>lineEdit_q2</zorder>
        <zorder>label_10</zorder>
        <zorder>lineEdit_q1</zorder>
-       <zorder>button_plan_begin</zorder>
-       <zorder>button_plan_end</zorder>
+       <zorder>button_wish_pos</zorder>
       </widget>
      </item>
     </layout>
@@ -663,7 +618,7 @@
          <bool>false</bool>
         </property>
        </widget>
-       <widget class="QPushButton" name="button_end">
+       <widget class="QPushButton" name="button_stop">
         <property name="geometry">
          <rect>
           <x>10</x>
@@ -682,17 +637,17 @@
        <widget class="QWidget" name="layoutWidget_2">
         <property name="geometry">
          <rect>
-          <x>30</x>
-          <y>190</y>
-          <width>191</width>
+          <x>20</x>
+          <y>200</y>
+          <width>201</width>
           <height>91</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_4">
          <item>
-          <widget class="QCheckBox" name="checkBox_UR5">
+          <widget class="QCheckBox" name="checkBox_vel">
            <property name="text">
-            <string>UR5勾   armc默认</string>
+            <string>速度勾   位置默认</string>
            </property>
           </widget>
          </item>
@@ -708,9 +663,9 @@
        <widget class="QPushButton" name="button_plan">
         <property name="geometry">
          <rect>
-          <x>20</x>
-          <y>290</y>
-          <width>211</width>
+          <x>10</x>
+          <y>300</y>
+          <width>221</width>
           <height>61</height>
          </rect>
         </property>
@@ -732,7 +687,7 @@
      <x>0</x>
      <y>0</y>
      <width>1238</width>
-     <height>35</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="defaultUp">
